# Open-Recall

./: .env  .env.example  .gitignore  CONTRIBUTING.md  HANDOVER.md  Hindsight_x_CascadeFlow_Problem_Statements (1).md  LICENSE  Makefile  README.md  SECURITY.md  api.py  app.py  pyproject.toml  requirements.txt  seed_memory.py
.github/workflows/: ci.yml
.kiro/hooks/: openrecall-audit-property-check.kiro.hook  openrecall-compileall-on-save.kiro.hook  openrecall-cost-curve-property-check.kiro.hook  openrecall-memory-property-check.kiro.hook  openrecall-pbt-on-test-edit.kiro.hook  openrecall-router-property-check.kiro.hook  openrecall-rules-audit.kiro.hook  openrecall-secret-handling-reminder.kiro.hook  openrecall-seed-alerts-determinism.kiro.hook  openrecall-signature-tests-on-models.kiro.hook  openrecall-triage-property-check.kiro.hook  openrecall-workflow-property-check.kiro.hook
.kiro/steering/: correctness-properties.md  hindsight-cascadeflow-integration.md  nextjs-cockpit.md  pbt-conventions.md  product.md  python-conventions.md  rules.md  structure.md  (+2 more)
.streamlit/: config.toml
content/: article_draft.md  demo_video_script.md  social_post.md
data/: local_memory.json  sample_alerts.json  seed_alerts.json  seed_incidents.json
docs/: ARCHITECTURE.md  DEMO.md  DEMO_VIDEO_SCRIPT.md  HACKATHON_SUBMISSION.md
incident_agent/: __init__.py  audit.py  calibration.py  cost_curve.py  fingerprint.py  memory.py  models.py  rbac.py  router.py  similarity.py  soar.py  triage.py  workflow.py
scripts/: generate_seed_alerts.py  smoke_test.py
tests/: test_signatures.py
(+19 files in other folders)
